Set java.hame and add exports